<resources>
    <string name="app_name">Guesstheword</string>
    <string name="word_is">Word is</string>
    <string name="skip">Skip</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">guess the word!</string>
    <string name="play_button">Play Button</string>
    <string name="get_ready">Get Ready</string>
    <string name="got_it">Got it</string>
    <string name="end_game">End Game</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="quote_format">\"%s\"</string>
    <string name="score_format">Current Score: %d</string>
</resources>