<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="gameViewModel"
            type="com.example.guesstheword.GameViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/game_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Game">


    <TextView
        android:id="@+id/word_is_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/word_is"
        android:fontFamily="sans-serif"
        android:textColor="@color/black_text_color"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/word_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.303"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/word_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textColor="@color/black_text_color"
        android:textSize="34sp"
        android:textStyle="normal"
        android:text="@{@string/quote_format(gameViewModel.word)}"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_is_text"
        tools:text="Tuna" />

    <TextView
        android:id="@+id/word_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@{gameViewModel.wordHint}"
        android:textColor="@color/black_text_color"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/timer_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/word_text" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@{gameViewModel.currentTimeString}"
        android:fontFamily="sans-serif"
        android:textColor="@color/black_text_color"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toTopOf="@+id/score_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="00::00" />

    <TextView
        android:id="@+id/score_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@{@string/score_format(gameViewModel.score)}"
        android:fontFamily="sans-serif"
        android:textColor="@color/black_text_color"
        android:textSize="14sp"
        android:textStyle="normal"

        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Score:0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="96dp" />

    <Button
        android:id="@+id/skip_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/skipButton"
        android:text="@string/skip"
        app:layout_constraintEnd_toStartOf="@+id/correct_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:onClick="@{() -> gameViewModel.onSkip()}"/>

    <Button
        android:id="@+id/correct_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/GoButton"
        android:text="@string/got_it"
        app:layout_constraintEnd_toStartOf="@+id/end_game"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        app:layout_constraintStart_toEndOf="@+id/skip_button"
        app:layout_constraintTop_toBottomOf="@+id/score_text"
        android:onClick="@{ () -> gameViewModel.onCorrect()}"/>

    <Button
        android:id="@+id/end_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/skipButton"
        android:text="@string/end_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/correct_button"
        app:layout_constraintTop_toTopOf="@+id/guideline"
        android:onClick="@{()-> gameViewModel.onGameFinish()}"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>